--- a/latex/citations.bib
+++ b/latex/citations.bib
@@ -169,7 +169,6 @@ journal = {Audio Engineering Society - 120th Convention Spring Preprints 2006}
 @inproceedings{librosa,
 author = {McFee, Brian and Raffel, Colin and Liang, Dawen and Ellis, Daniel and Mcvicar, Matt and Battenberg, Eric and Nieto, Oriol},
 year = {2015},
-month = {01},
 pages = {18-24},
 title = {librosa: Audio and Music Signal Analysis in Python},
 doi = {10.25080/Majora-7b98e3ed-003}
@@ -178,7 +177,6 @@ doi = {10.25080/Majora-7b98e3ed-003}
 @article{musicsepgood,
 author = {Cano, Estefanía and Fitzgerald, Derry and Liutkus, Antoine and Plumbley, Mark and Stöter, Fabian-Robert},
 year = {2018},
-month = {01},
 pages = {},
 title = {Musical Source Separation: An Introduction},
 volume = {36},
@@ -189,7 +187,6 @@ doi = {10.1109/MSP.2018.2874719}
 @article{fitzgerald1,
 author = {Fitzgerald, Derry},
 year = {2010},
-month = {01},
 title = {Harmonic/Percussive Separation using Median Filtering},
 journal = {13th International Conference on Digital Audio Effects (DAFx-10)},
 url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
@@ -198,7 +195,6 @@ url = {http://dafx10.iem.at/papers/DerryFitzGerald_DAFx10_P15.pdf}
 @article{fitzgerald2,
 author = {Fitzgerald, Derry and Gainza, Mikel},
 year = {2010},
-month = {01},
 pages = {},
 title = {Single Channel Vocal Separation using Median Filtering and Factorisation Techniques},
 volume = {4},
@@ -225,8 +221,7 @@ journal = {ISAST Transactions on Electronic and Signal Processing}
                   Mimilakis, Stylianos Ioannis and
                   Bittner, Rachel},
   title        = {The {MUSDB18} corpus for music separation},
-  month        = dec,
-  year         = 2017,
+  year         = {2017},
   doi          = {10.5281/zenodo.1117372},
 }
 
@@ -237,15 +232,13 @@ journal = {ISAST Transactions on Electronic and Signal Processing}
                   Mimilakis, Stylianos Ioannis and
                   Bittner, Rachel},
   title        = {MUSDB18-HQ - an uncompressed version of MUSDB18},
-  month        = aug,
-  year         = 2019,
+  year         = {2019},
   doi          = {10.5281/zenodo.3338373},
 }
 
 @article{bss,
 author = {Vincent, Emmanuel and Gribonval, Rémi and Févotte, Cédric},
 year = {2006},
-month = {08},
 pages = {1462 - 1469},
 title = {Performance measurement in blind audio source separation},
 volume = {14},
@@ -268,7 +261,6 @@ doi = {10.1109/TSA.2005.858005}
 @inbook{masking,
 author = {Gerkmann, Timo and Vincent, Emmanuel},
 year = {2018},
-month = {08},
 pages = {65-85},
 title = {Spectral Masking and Filtering},
 isbn = {9781119279891},
@@ -279,7 +271,6 @@ url = {https://hal.inria.fr/hal-01881425/document}
 @article{vincent07,
 author = {Vincent, Emmanuel and Gribonval, Rémi and Plumbley, Mark},
 year = {2007},
-month = {08},
 pages = {1933-1950},
 title = {Oracle estimators for the benchmarking of source separation algorithms},
 volume = {87},
@@ -290,7 +281,6 @@ doi = {10.1016/j.sigpro.2007.01.016}
 @article{umxsota,
 author = {Stöter, Fabian-Robert and Uhlich, Stefan and Liutkus, Antoine and Mitsufuji, Yuki},
 year = {2019},
-month = {09},
 pages = {1667},
 title = {Open-Unmix - A Reference Implementation for Music Source Separation},
 volume = {4},
@@ -331,7 +321,6 @@ doi = {10.1007/978-3-642-55016-4_12}
 @software{pandas,
     author       = {The pandas development team},
     title        = {pandas-dev/pandas: Pandas},
-    month        = {02},
     year         = {2020},
     publisher    = {Zenodo},
     version      = {latest},
@@ -341,7 +330,6 @@ doi = {10.1007/978-3-642-55016-4_12}
 @software{seaborn,
     author       = {Michael Waskom and the seaborn development team},
     title        = {mwaskom/seaborn},
-    month        = {09},
     year         = {2020},
     publisher    = {Zenodo},
     version      = {latest},
@@ -386,7 +374,6 @@ url = {http://papers.neurips.cc/paper/9015-pytorch-an-imperative-style-high-perf
 @article{musicmask,
 author = {Liu, Ruolun and Li, Suping},
 year = {2009},
-month = {09},
 pages = {},
 title = {A review on music source separation},
 journal = {Proceedings - 2009 IEEE Youth Conference on Information, Computing and Telecommunication, YC-ICT2009},
@@ -407,7 +394,6 @@ url={http://www.granularsynthesis.com/pdf/gabor.pdf}
 @article{dictionary,
 author = {Rubinstein, Ron and Bruckstein, Alfred and Elad, Michael},
 year = {2010},
-month = {07},
 pages = {1045 - 1057},
 title = {Dictionaries for Sparse Representation Modeling},
 volume = {98},
@@ -437,14 +423,12 @@ number = {12},
 issn = {1053-587X},
 doi = {10.1109/78.258082},
 journal = {Trans. Sig. Proc.},
-month = {12},
 pages = {3397–3415},
 }
 
 @article{dictionary2,
 author = {Chen, S.S. and Donoho, D. and Saunders, Michael},
 year = {2001},
-month = {01},
 pages = {33-61},
 title = {Atomic decomposition by basis pursuit[J]},
 volume = {43},
@@ -454,7 +438,6 @@ journal = {Siam Review}
 @phdthesis{doerflerphd,
 author = {Doerfler, Monika},
 year = {2002},
-month = {01},
 pages = {},
 title = {Gabor analysis for a class of signals called music},
 url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
@@ -463,7 +446,6 @@ url = {http://www.mathe.tu-freiberg.de/files/thesis/gamu_1.pdf}
 @article{psycho1,
 author = {Oppenheim, Jacob and Magnasco, Marcelo},
 year = {2012},
-month = {08},
 pages = {},
 title = {Human Time-Frequency Acuity Beats the Fourier Uncertainty Principle},
 volume = {110},
@@ -496,7 +478,6 @@ pages = {336--338},
 @article{stftinvertible,
 author = {Heinzel, Gerhard and Rüdiger, Albrecht and Schilling, R},
 year = {2002},
-month = {01},
 pages = {},
 title = {Spectrum and spectral density estimation by the Discrete Fourier transform (DFT), including a comprehensive list of window functions and some new flat-top windows},
 volume = {12},
@@ -506,7 +487,6 @@ journal = {Max Plank Inst}
 @article{adaptivecqt,
 author = {Liuni, Marco and Roebel, Axel and Matusiak, Ewa and Romito, Marco and Rodet, Xavier},
 year = {2013},
-month = {05},
 pages = {},
 title = {Automatic Adaptation of the Time-Frequency Resolution for Sound Analysis and Re-Synthesis},
 volume = {21},
@@ -542,7 +522,6 @@ title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks
 @misc{driedger,
 author = {Driedger, Jonathan and Müller, Meinard and Disch, Sascha},
 year = {2014},
-month = {01},
 pages = {},
 title = {Extending Harmonic-Percussive Separation of Audio Signals},
 url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01-publications/2014_DriedgerMuellerDisch_ExtensionsHPSeparation_ISMIR.pdf}
@@ -551,7 +530,6 @@ url = {https://www.audiolabs-erlangen.de/content/05-fau/assistant/00-driedger/01
 @inproceedings{beatnsgt,
 author = {Holzapfel, Andre and Velasco, Gino Angelo and Holighaus, Nicki and Doerfler, Monika and Flexer, Arthur},
 year = {2011},
-month = {11},
 pages = {45-50},
 title = {Advantages of nonstationary gabor transforms in beat tacking},
 doi = {10.1145/2072529.2072542}
@@ -567,7 +545,6 @@ doi = {10.1145/2072529.2072542}
 @article{sparsitykowalski,
 author = {Kowalski, Matthieu and Torrésani, Bruno},
 year = {2009},
-month = {09},
 pages = {},
 title = {Sparsity and persistence: Mixed norms provide simple signal models with dependent coefficients},
 volume = {3},
@@ -578,7 +555,6 @@ doi = {10.1007/s11760-008-0076-1}
 @article{sparsitykowalski2,
 author = {Kowalski, Matthieu and Torrésani, Bruno},
 year = {2009},
-month = {04},
 pages = {},
 title = {Structured Sparsity: from Mixed Norms to Structured Shrinkage},
 volume = {53},
@@ -587,7 +563,35 @@ journal = {SPARS09-Signal Processing with Adaptive Sparse Structured Representat
 @article{musicsepwindow,
 author = {Simpson, Andrew},
 year = {2015},
-month = {04},
 pages = {},
 title = {Time-Frequency Trade-offs for Audio Source Separation with Binary Masks}
+}
+
+@inproceedings{cqtransient,
+author = {Schörkhuber, Christian and Klapuri, Anssi and Sontacchi, Alois},
+year = {2012},
+title = {Pitch shifting of audio signals using the constant-Q transform},
+journal = {Proceedings of the 15th International Conference on Digital Audio Effects, DAFx 2012}
+}
+
+@inproceedings{lackinverse,
+author={Hu, Peng and Yan, Qin and Dong, Luan and Liu, Meng},
+booktitle={2014 22nd European Signal Processing Conference (EUSIPCO)},
+title={An improved patchwork-based digital audio watermarking in CQT domain},
+year={2014},
+pages={920-923}
+}
+
+@inproceedings{variableq1,
+author = {Schörkhuber, Christian and Klapuri, Anssi and Holighaus, Nicki and Doerfler, Monika},
+year = {2014},
+title = {A Matlab Toolbox for Efficient Perfect Reconstruction Time-Frequency Transforms with Log-Frequency Resolution},
+booktitle = {Proceedings of the AES International Conference}
+}
+
+@inproceedings{cqtseparation,
+author = {Shi, Ziqiang and Lin, Huibin and Liu, Liu and Liu, Rujie and Han, Jiqing},
+year = {2019},
+pages = {},
+title = {Is CQT more suitable for monaural speech separation than STFT? an empirical study},
 }
